objects/DataMaskingCustomSetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>LatestBeginTimestamp__c</fullName>
        <label>LatestBeginTimestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LatestId__c</fullName>
        <label>LatestId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LatestTimestamp__c</fullName>
        <label>LatestTimestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>DataMaskingCustomSetting</label>
</CustomObject>